<resources>
    <string name="app_name">Top News</string>
    <string name="categories">Top Story Categories</string>
    <string name="desc">An application that displays current Top Stories with their links authors etc  in your selected category.</string>
    <string name="arts">Arts</string>
    <string name="automobiles">Automobiles</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="health">Health</string>'
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="student1">Khushi 1129100</string>
    <string name="student2">Muskaan 1128728</string>
</resources>