<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sportsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/politicsBtn"
        app:layout_constraintTop_toTopOf="@+id/politicsBtn" />

    <Button
        android:id="@+id/artBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        app:layout_constraintBottom_toTopOf="@+id/businessBtn"
        app:layout_constraintEnd_toStartOf="@+id/autoBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/foodBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fashionBtn"
        app:layout_constraintTop_toTopOf="@+id/fashionBtn" />

    <Button
        android:id="@+id/autoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automobiles"
        app:layout_constraintEnd_toStartOf="@+id/bookBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/artBtn"
        app:layout_constraintTop_toTopOf="@+id/artBtn" />

    <Button
        android:id="@+id/bookBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technology"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/autoBtn"
        app:layout_constraintTop_toTopOf="@+id/autoBtn" />

    <Button
        android:id="@+id/politicsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/politics"
        app:layout_constraintEnd_toStartOf="@+id/sportsBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/healthBtn"
        app:layout_constraintTop_toTopOf="@+id/healthBtn" />

    <Button
        android:id="@+id/fashionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion"
        app:layout_constraintEnd_toStartOf="@+id/foodBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/businessBtn"
        app:layout_constraintTop_toTopOf="@+id/businessBtn" />

    <Button
        android:id="@+id/businessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business"
        app:layout_constraintBottom_toTopOf="@+id/healthBtn"
        app:layout_constraintEnd_toStartOf="@+id/fashionBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artBtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/healthBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/politicsBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessBtn"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="261dp"
        android:layout_height="200dp"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/newspaper" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/categories"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/artBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/student1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/student1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/student2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/student2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/student2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/student1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>